added timer and improved UI

--- a/index.html
+++ b/index.html
@@ -16,15 +16,11 @@
 
     <div class="action-cont">
         <div class="record-btn-cont">
-            <div class="record-btn">
-                
-            </div>
+            <div class="record-btn"></div>
         </div>
 
         <div class="capture-btn-cont">
-            <div class="capture-btn">
-                
-            </div>
+            <div class="capture-btn"></div>
         </div>
     </div>
 
