--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
 
     <span class="material-icons gallery">collections</span>
 
+    <script>
+        let gallery = document.querySelector('.gallery');
+        gallery.addEventListener('click', (e) => {
+            location.assign('./gallery.html');
+        })
+    </script>
+    <script src="https://unpkg.com/shortid-dist@1.0.5/dist/shortid-2.2.13.min.js"></script>
     <script src="./script.js"></script>
+    <script src="./db.js"></script>
 </body>
 </html>
